# libalt-repo

./: .gitignore  README.md  index.html  libalt-repo.spec  meson.build  meson_options.txt  vala-lint.conf
.forgejo/workflows/: auto-update.yml  build.yml
.gear/: rules
.gear/tags/: list
.github/workflows/: CI-auto-update.yml  CI-push  CI-push.yml
auto-update/: print_api_version.py  update.sh  update_main_meson.py  update_meson.py
build-aux/altlinux/: libalt-repo.spec
build-aux/sisyphus/: libalt-repo.spec
doc/: meson.build
lib/: client.vala  meson.build
lib/objects/: a-p-i-version.vala  acl-by-packages-element.vala  acl-by-packages.vala  acl-groups-element.vala  acl-groups.vala  acl-maintainer-groups-element.vala  acl-maintainer-groups.vala  active-images-element.vala  active-images.vala  advisory-errata-element.vala  advisory-errata-json.vala  advisory-errata-package-version-range.vala  advisory-errata-reference.vala  advisory-errata.vala  all-maintainers-element.vala  all-maintainers.vala  all-tasks-branches.vala  api-version.vala  auth-logout-response.vala  auth-response.vala  backport-helper-binary-depth-element.vala  backport-helper-binary-element.vala  backport-helper.vala  bin-package-log-element.vala  branch-tree-branch-commit.vala  branch-tree-branch-point.vala  branch-tree-task.vala  branch-tree.vala  bugzilla-info-element.vala  bugzilla-info.vala  build-dependency-set-ambiguous-provides-element.vala  build-dependency-set-ambiguous-provides-package.vala  build-dependency-set-ambiguous-provides.vala  build-dependency-set-package.vala  build-dependency-set-packages.vala  build-dependency-set.vala  check-images-input-filter.vala  check-images-input.vala  check-images-output-image.vala  check-images-output-package.vala  (+261 more)
libalt-repo-1/: AltRepo.APIVersion.APIVersion.html  AltRepo.APIVersion.description.html  AltRepo.APIVersion.html  AltRepo.APIVersion.name.html  AltRepo.APIVersion.version.html  AltRepo.AclByPackages.AclByPackages.html  AltRepo.AclByPackages.branch.html  AltRepo.AclByPackages.html  AltRepo.AclByPackages.packages.html  AltRepo.AclByPackagesElement.AclByPackagesElement.html  AltRepo.AclByPackagesElement.html  AltRepo.AclByPackagesElement.members.html  AltRepo.AclByPackagesElement.name.html  AltRepo.AclByPackagesElement.updated.html  AltRepo.AclGroups.AclGroups.html  AltRepo.AclGroups.groups.html  AltRepo.AclGroups.html  AltRepo.AclGroups.length.html  AltRepo.AclGroups.request_args.html  AltRepo.AclGroupsElement.AclGroupsElement.html  AltRepo.AclGroupsElement.date.html  AltRepo.AclGroupsElement.group.html  AltRepo.AclGroupsElement.html  AltRepo.AclGroupsElement.maintainers.html  AltRepo.AclMaintainerGroups.AclMaintainerGroups.html  AltRepo.AclMaintainerGroups.branches.html  AltRepo.AclMaintainerGroups.html  AltRepo.AclMaintainerGroups.nickname.html  AltRepo.AclMaintainerGroupsElement.AclMaintainerGroupsElement.html  AltRepo.AclMaintainerGroupsElement.groups.html  AltRepo.AclMaintainerGroupsElement.html  AltRepo.AclMaintainerGroupsElement.name.html  AltRepo.ActiveImages.ActiveImages.html  AltRepo.ActiveImages.html  AltRepo.ActiveImages.images.html  AltRepo.ActiveImages.length.html  AltRepo.ActiveImages.request_args.html  AltRepo.ActiveImagesElement.ActiveImagesElement.html  AltRepo.ActiveImagesElement.edition.html  AltRepo.ActiveImagesElement.html  (+2381 more)
subprojects/: libapi-base.wrap
tests/: client-test.vala  meson.build
