option('documentation', type: 'boolean', value: false, description: 'generate documentation with gtk-doc and valadoc')
option('introspection', type: 'boolean', value: true, description: 'Whether to build introspection files')
option('run_net_tests', type: 'boolean', value: true, description: 'Whether to run SoupWrapper tests')
