vapi_sources = files(
  
)

vala_sources = files(
  'client.vala',
  'objects/a-p-i-version.vala',
  'objects/acl-by-packages-element.vala',
  'objects/acl-by-packages.vala',
  'objects/acl-groups-element.vala',
  'objects/acl-groups.vala',
  'objects/acl-maintainer-groups-element.vala',
  'objects/acl-maintainer-groups.vala',
  'objects/active-images-element.vala',
  'objects/active-images.vala',
  'objects/advisory-errata-element.vala',
  'objects/advisory-errata-json.vala',
  'objects/advisory-errata-package-version-range.vala',
  'objects/advisory-errata-reference.vala',
  'objects/advisory-errata.vala',
  'objects/all-maintainers-element.vala',
  'objects/all-maintainers.vala',
  'objects/all-tasks-branches.vala',
  'objects/auth-logout-response.vala',
  'objects/auth-response.vala',
  'objects/backport-helper-binary-depth-element.vala',
  'objects/backport-helper-binary-element.vala',
  'objects/backport-helper.vala',
  'objects/bin-package-log-element.vala',
  'objects/branch-tree-branch-commit.vala',
  'objects/branch-tree-branch-point.vala',
  'objects/branch-tree-task.vala',
  'objects/branch-tree.vala',
  'objects/bugzilla-info-element.vala',
  'objects/bugzilla-info.vala',
  'objects/build-dependency-set-ambiguous-provides-element.vala',
  'objects/build-dependency-set-ambiguous-provides-package.vala',
  'objects/build-dependency-set-ambiguous-provides.vala',
  'objects/build-dependency-set-package.vala',
  'objects/build-dependency-set-packages.vala',
  'objects/build-dependency-set.vala',
  'objects/check-images-input-filter.vala',
  'objects/check-images-input.vala',
  'objects/check-images-output-image.vala',
  'objects/check-images-output-package.vala',
  'objects/check-images-output.vala',
  'objects/cve-task-package-vulnerable-element.vala',
  'objects/cve-task-packages-element.vala',
  'objects/cve-vulnerable-task.vala',
  'objects/dependencies-all-packagasets-element.vala',
  'objects/dependencies-package-build-dependencies.vala',
  'objects/dependencies-package-dependencies-element.vala',
  'objects/dependencies-package-dependencies.vala',
  'objects/dependencies-package-info-element.vala',
  'objects/dependencies-package-info.vala',
  'objects/dependencies-packages-element.vala',
  'objects/dependencies-packages.vala',
  'objects/errata-branch-update.vala',
  'objects/errata-branches-updates.vala',
  'objects/errata-branches.vala',
  'objects/errata-bug.vala',
  'objects/errata-ids-list.vala',
  'objects/errata-json-post-list.vala',
  'objects/errata-last-changed-element.vala',
  'objects/errata-last-changed.vala',
  'objects/errata-package-update.vala',
  'objects/errata-packages-updates.vala',
  'objects/errata-reference.vala',
  'objects/errata-vulnerability.vala',
  'objects/errata.vala',
  'objects/erratas.vala',
  'objects/export-beehive-f-t-b-f-s-element.vala',
  'objects/export-beehive-f-t-b-f-s-list.vala',
  'objects/fast-dependency-search-element.vala',
  'objects/fast-dependency-search.vala',
  'objects/fast-file-search-element.vala',
  'objects/fast-file-search.vala',
  'objects/file-packages-by-file-element.vala',
  'objects/file-packages-by-file.vala',
  'objects/files-element.vala',
  'objects/files.vala',
  'objects/find-images-by-package-element.vala',
  'objects/find-images-by-package.vala',
  'objects/find-images-by-task-image-element.vala',
  'objects/find-images-by-task-iteration-element.vala',
  'objects/find-images-by-task-subtask-element.vala',
  'objects/find-images-by-task.vala',
  'objects/find-source-package-in-branch.vala',
  'objects/find-tasks-element.vala',
  'objects/find-tasks.vala',
  'objects/image-all-i-s-o-element.vala',
  'objects/image-all-i-s-o.vala',
  'objects/image-errata-element.vala',
  'objects/image-errata.vala',
  'objects/image-info-component.vala',
  'objects/image-info-element.vala',
  'objects/image-info.vala',
  'objects/image-j-s-o-n-element.vala',
  'objects/image-j-s-o-n.vala',
  'objects/image-package-set.vala',
  'objects/image-packages-element.vala',
  'objects/image-packages-element1.vala',
  'objects/image-packages-element2.vala',
  'objects/image-packages-inspect-regular.vala',
  'objects/image-packages-inspect-s-p-package.vala',
  'objects/image-packages-inspect-s-p.vala',
  'objects/image-packages-j-s-o-n-element.vala',
  'objects/image-packages-j-s-o-n.vala',
  'objects/image-packages.vala',
  'objects/image-status-get-element.vala',
  'objects/image-status-get.vala',
  'objects/image-tag-j-s-o-n-element.vala',
  'objects/image-tag-j-s-o-n.vala',
  'objects/image-tag-status-get-element.vala',
  'objects/image-tag-status-get.vala',
  'objects/image-tag-u-u-i-d.vala',
  'objects/last-image-packages-element.vala',
  'objects/last-image-packages.vala',
  'objects/license-info.vala',
  'objects/license-tokens-element.vala',
  'objects/license-tokens.vala',
  'objects/maintainer-branches.vala',
  'objects/maintainer-info.vala',
  'objects/maintainer-packages-element.vala',
  'objects/maintainer-packages.vala',
  'objects/maintainer-score-element.vala',
  'objects/maintainer-score.vala',
  'objects/maintainer-scores-batch-element.vala',
  'objects/maintainer-scores-batch-maintainer.vala',
  'objects/maintainer-scores-batch.vala',
  'objects/needs-approval-subtask-element.vala',
  'objects/needs-approval-task-element.vala',
  'objects/needs-approval.vala',
  'objects/oval-branches.vala',
  'objects/package-build-dependency-element.vala',
  'objects/package-build-dependency.vala',
  'objects/package-by-file-name-element.vala',
  'objects/package-by-file-name.vala',
  'objects/package-depends-element.vala',
  'objects/package-depends.vala',
  'objects/package-files-element.vala',
  'objects/package-files.vala',
  'objects/package-find-packageset-element.vala',
  'objects/package-find-packageset.vala',
  'objects/package-info-changelog-element.vala',
  'objects/package-info-dependencies.vala',
  'objects/package-info-package.vala',
  'objects/package-info.vala',
  'objects/package-misconflict-by-src-element.vala',
  'objects/package-misconflict-by-src.vala',
  'objects/package-misconflict-package.vala',
  'objects/package-misconflict-packages.vala',
  'objects/package-n-v-r-by-hash.vala',
  'objects/package-name-from-repology.vala',
  'objects/package-set-active-package-sets.vala',
  'objects/package-set-status-get-element.vala',
  'objects/package-set-status-get.vala',
  'objects/package-set-status-post-element.vala',
  'objects/package-set-status-post.vala',
  'objects/package-specfile.vala',
  'objects/packages-by-file-names-json.vala',
  'objects/packages-by-uuid-element.vala',
  'objects/packages-by-uuid.vala',
  'objects/packages-element.vala',
  'objects/packageset-compare-element.vala',
  'objects/packageset-compare-package.vala',
  'objects/packageset-compare.vala',
  'objects/packageset-packages-element.vala',
  'objects/packageset-packages-export-element.vala',
  'objects/packageset-packages-export.vala',
  'objects/packageset-packages.vala',
  'objects/repocop-by-maintainer-element.vala',
  'objects/repocop-by-maintainer.vala',
  'objects/repocop-json-get-list.vala',
  'objects/repocop-json-get.vala',
  'objects/repocop-json-post-list.vala',
  'objects/repocop-json-post.vala',
  'objects/repology-export-branch-binary-package-element.vala',
  'objects/repology-export-branch-source-package-element.vala',
  'objects/repology-export-branch-stat-element.vala',
  'objects/repology-export.vala',
  'objects/repository-statistics-branches.vala',
  'objects/repository-statistics-package-counts.vala',
  'objects/repository-statistics.vala',
  'objects/s-ite-packages-versions-from-tasks-element.vala',
  'objects/s-ite-packages-versions-from-tasks.vala',
  'objects/site-all-archs-element.vala',
  'objects/site-all-archs.vala',
  'objects/site-all-packagasets-element.vala',
  'objects/site-all-packagasets.vala',
  'objects/site-all-packagesets-summary-branches.vala',
  'objects/site-all-packagesets-summary-counts.vala',
  'objects/site-all-packagesets-summary.vala',
  'objects/site-beehive-by-maintainer-element.vala',
  'objects/site-beehive-by-maintainer.vala',
  'objects/site-bin-package-scripts-element.vala',
  'objects/site-bin-package-scripts.vala',
  'objects/site-brief-package-info.vala',
  'objects/site-changelog-element.vala',
  'objects/site-changelog.vala',
  'objects/site-deleted-package.vala',
  'objects/site-fast-packages-search-element.vala',
  'objects/site-fast-packages-search.vala',
  'objects/site-fing-packages-package.vala',
  'objects/site-fing-packages.vala',
  'objects/site-image-categories.vala',
  'objects/site-image-category-element.vala',
  'objects/site-image-package-versions-element.vala',
  'objects/site-image-package-versions.vala',
  'objects/site-last-branch-packages-package.vala',
  'objects/site-last-branch-packages.vala',
  'objects/site-last-packages-element.vala',
  'objects/site-last-packages-package.vala',
  'objects/site-last-packages-with-c-v-e-fixes-element.vala',
  'objects/site-last-packages-with-c-v-e-fixes.vala',
  'objects/site-last-packages.vala',
  'objects/site-package-beehive-element.vala',
  'objects/site-package-dependencies-element.vala',
  'objects/site-package-info-archs.vala',
  'objects/site-package-info-changelog-element.vala',
  'objects/site-package-info.vala',
  'objects/site-package-license-tokens-element.vala',
  'objects/site-package-new-version.vala',
  'objects/site-package-tasks-element.vala',
  'objects/site-package-versions-element.vala',
  'objects/site-packages-binary-list-element.vala',
  'objects/site-packages-binary-list.vala',
  'objects/site-packages-downloads-element.vala',
  'objects/site-packages-downloads-package.vala',
  'objects/site-packages-downloads.vala',
  'objects/site-packages-element.vala',
  'objects/site-packages.vala',
  'objects/site-packageset-categories.vala',
  'objects/site-packageset-category-element.vala',
  'objects/site-packageset-package-hash-by-name-version-release.vala',
  'objects/site-packageset-package-hash.vala',
  'objects/site-packageset-status-element.vala',
  'objects/site-packagesets-by-hash.vala',
  'objects/site-packagesets-summary-status.vala',
  'objects/site-source-packages-versions.vala',
  'objects/site-task-by-name-package.vala',
  'objects/site-task-by-name-task.vala',
  'objects/site-task-by-name.vala',
  'objects/site-tasks-history.vala',
  'objects/site-watch-by-maintainer-element.vala',
  'objects/site-watch-by-maintainer.vala',
  'objects/sitemap-packages-element.vala',
  'objects/sitemap-packages-export.vala',
  'objects/sub-task-architecture.vala',
  'objects/sub-task-info-element.vala',
  'objects/sub-tasks-element.vala',
  'objects/task-approval-element.vala',
  'objects/task-build-dependency-element.vala',
  'objects/task-build-dependency.vala',
  'objects/task-diff-archs.vala',
  'objects/task-diff-dependencies.vala',
  'objects/task-diff-packages.vala',
  'objects/task-diff.vala',
  'objects/task-find-packageset-element.vala',
  'objects/task-find-packageset.vala',
  'objects/task-history-element.vala',
  'objects/task-history.vala',
  'objects/task-info-approvals.vala',
  'objects/task-info-archs.vala',
  'objects/task-info-package.vala',
  'objects/task-info-plan.vala',
  'objects/task-info-plan2.vala',
  'objects/task-info-subtask.vala',
  'objects/task-info.vala',
  'objects/task-iterations-element.vala',
  'objects/task-misconflict-package.vala',
  'objects/task-misconflict-packages.vala',
  'objects/task-packages-package-element.vala',
  'objects/task-packages-subtask-element.vala',
  'objects/task-packages.vala',
  'objects/task-progress-task-info.vala',
  'objects/task-repo-archs.vala',
  'objects/task-repo-info.vala',
  'objects/task-repo-package.vala',
  'objects/task-repo.vala',
  'objects/tasks-history-branch-commit.vala',
  'objects/tasks-history-task.vala',
  'objects/tasks-list-element.vala',
  'objects/tasks-list.vala',
  'objects/unpackaged-dirs-element.vala',
  'objects/unpackaged-dirs.vala',
  'objects/vuln-fixes-packages-element.vala',
  'objects/vuln-fixes-packages.vala',
  'objects/vuln-package-last-version.vala',
  'objects/vulnerabilities-element.vala',
  'objects/vulnerability-c-v-s-s-vector-elelement.vala',
  'objects/vulnerability-configuration-element.vala',
  'objects/vulnerability-info.vala',
  'objects/vulnerability-parsed-details.vala',
  'objects/vulnerability-reference-element.vala',
  'objects/vulnerability.vala',
)

sources = [
  vapi_sources,
  vala_sources,
]

lib = shared_library(
  versioned_name,
  sources,
  dependencies: dependencies,
  vala_header: header_name,
  vala_vapi: vapi_name,
  vala_gir: gir_name,
  version: meson.project_version(),
  install: true,
  install_dir: [ true, true, true, true ],
)

lib_dep = declare_dependency(
  link_with: lib,
  include_directories: include_directories('.'),
  dependencies: dependencies
)

deps_conf = configuration_data()
deps_conf.set ('DEPS',  '\n'.join (deps_pkgs))

configure_file(
  input: 'lib.deps.in',
  output: deps_name,
  configuration: deps_conf,
  install: true,
  install_dir: get_option('datadir') / 'vala' / 'vapi',
)

if get_option('introspection')
  g_ir_compiler = find_program('g-ir-compiler')
  custom_target(
    'typelib',
    command: [
      g_ir_compiler,
      '--shared-library', '@PLAINNAME@',
      '--output', '@OUTPUT@',
      '--includedir', gee_girdir,
      meson.current_build_dir() / gir_name,
    ],
    input: lib,
    output: typelib_name,
    depends: lib,
    install: true,
    install_dir: get_option('libdir') / 'girepository-1.0',
  )
endif

pkgconfig.generate(
  lib,
  name: versioned_lib_name,
  requires: pkgconfig_requires,
  subdirs: [ versioned_lib_name ],
  description: 'ALT Repo API library',
  version: meson.project_version(),
  url: 'https://github.com/alt-gnome/libalt-repo-vala',
)
